--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,63 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer components {
+    .heroButton {
+        @apply px-2 py-1 rounded-full uppercase text-sm tracking-widest transition-all
+    }
+    h1 {
+        line-height: 1.2em;
+        letter-spacing: -0.04em;
+        font-family: 'Ginger Bold';
+    }
+    h3::after {
+        transition-delay: 0.21s;
+        background-color: #fffade;
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 50px;
+        width: 24px;
+        height: 8px;
+        margin: -3.5px 0 0 -12px;
+        transition: 0.72s;
+        transition-timing-function: cubic-bezier(0.52, 0.01, 0.16, 1);
+        transform: skewY(-16deg) scaleX(1);
+        transform-origin: 0 100%;
+    }
+    /* .about {
+        @apply from-[#fff42d] to-[#fff42d]
+        /* background: linear-gradient(to top, #ffd42d 20%); 
+}*/
+    .contactInput {
+        @apply outline-none bg-[#fffade]/50 rounded-sm border-b px-6 py-4 border-[#FEDB39] text-gray-700 placeholder-gray-500 transition-all
+    }
+}
+
+@font-face {
+    font-family: 'Galand Bold';
+    src: url('../public/fonts/Gallant-bold.otf');
+}
+
+@font-face {
+    font-family: 'Galand Regular';
+    src: url('../public/fonts/Gallant-regular.otf');
+}
+
+@font-face {
+    font-family: 'Equal Slipcase Thin';
+    src: url('../public/fonts/EqualSlipcaseThin.otf');
+}
+
+@font-face {
+    font-family: 'Casper Medium';
+    src: url('../public/fonts/CasperDisplay-Medium.otf');
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+    /* background: linear-gradient(to top, #ffd42d 90%); */
+    background-image: url('../public/images/horizon-intro.jpeg');
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
